@@ -16,6 +16,7 @@ Changes for 1.3.5.3
 -Fixed the soft-lock in an attempt to erase the gamesave using the two-player game menu
 -Order of episodes lists now alphabetical
 -Added the "compat.ini" option to require players to be on the ground to enter warps
+-On-screen elements such as HUD and other printing debug information will not shake with in-game happenings
 
 Changes for 1.3.5.2
 -Fixed the ARM64 building
